// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`extendedImage rendering compile "HTML: multiple style props" 1`] = `
VFile {
  "contents": "<h1 id=\\"root\\"><a aria-hidden=\\"true\\" class=\\"anchor-heading\\" href=\\"#root\\"><svg aria-hidden=\\"true\\" viewBox=\\"0 0 16 16\\"><use xlink:href=\\"#svg-link\\"></use></svg></a>Root</h1>
<p><img src=\\"/assets/image.png\\" alt=\\"alt text\\" style=\\"width:50%;max-height:400px;opacity:0.8;\\"></p>
<hr>
<strong>Children</strong>
<ol>
<li><a href=\\"bar.html\\">Bar</a></li>
<li><a href=\\"foo.html\\">Foo</a></li>
</ol>",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`extendedImage rendering compile "HTML: no alt" 1`] = `
VFile {
  "contents": "<h1 id=\\"root\\"><a aria-hidden=\\"true\\" class=\\"anchor-heading\\" href=\\"#root\\"><svg aria-hidden=\\"true\\" viewBox=\\"0 0 16 16\\"><use xlink:href=\\"#svg-link\\"></use></svg></a>Root</h1>
<p><img src=\\"/assets/image.png\\" style=\\"width:50%;\\"></p>
<hr>
<strong>Children</strong>
<ol>
<li><a href=\\"bar.html\\">Bar</a></li>
<li><a href=\\"foo.html\\">Foo</a></li>
</ol>",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`extendedImage rendering compile "HTML: single style prop" 1`] = `
VFile {
  "contents": "<h1 id=\\"root\\"><a aria-hidden=\\"true\\" class=\\"anchor-heading\\" href=\\"#root\\"><svg aria-hidden=\\"true\\" viewBox=\\"0 0 16 16\\"><use xlink:href=\\"#svg-link\\"></use></svg></a>Root</h1>
<p><img src=\\"/assets/image.png\\" alt=\\"alt text\\" style=\\"width:50%;\\"></p>
<hr>
<strong>Children</strong>
<ol>
<li><a href=\\"bar.html\\">Bar</a></li>
<li><a href=\\"foo.html\\">Foo</a></li>
</ol>",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`extendedImage rendering compile "MD_DENDRON: multiple style props" 1`] = `
VFile {
  "contents": "![alt text](/assets/image.png){width: 50%, max-height: 400px, opacity: 0.8}

",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`extendedImage rendering compile "MD_DENDRON: no alt" 1`] = `
VFile {
  "contents": "![](/assets/image.png){width: 50%}

",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`extendedImage rendering compile "MD_DENDRON: single style prop" 1`] = `
VFile {
  "contents": "![alt text](/assets/image.png){width: 50%}

",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`extendedImage rendering compile "MD_REGULAR: multiple style props" 1`] = `
VFile {
  "contents": "# Root

![alt text](/assets/image.png)

",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`extendedImage rendering compile "MD_REGULAR: no alt" 1`] = `
VFile {
  "contents": "# Root

![](/assets/image.png)

",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`extendedImage rendering compile "MD_REGULAR: single style prop" 1`] = `
VFile {
  "contents": "# Root

![alt text](/assets/image.png)

",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;
